# parquet-anonymizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
parquet-anonymizer/: anonymizer.py
parquet_anonymizer/: anonymizer.py  cli.py  config.py  config_generator.py  util.py
parquet_anonymizer/field_types/: __init__.py  city.py  company.py  country.py  county.py  currency_symbol.py  custom.py  custom_address.py  custom_name.py  date_time.py  email_address.py  field_type_factory.py  file_name.py  first_name.py  float_range.py  full_address.py  full_name.py  iban.py  int_range.py  job.py  last_name.py  normal_int.py  options.py  phone_number.py  safe_harbor_age.py  ssn.py  street_address.py  user_type.py  zip.py
parquet_anonymizer/field_types/decorators/: apply_user_callback.py  text_formatter.py
parquet_anonymizer/user/: stip_newlines_callback.py  user_callback.py
