[tool.poetry]
name = "parquet-anonymizer"
version = "0.1.0"
description = "Data anonymizer for parquet files, configureable by column requirements"
authors = ["cmheidt"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.11.0"
Faker = "^30.8.1"
xxhash = "^3.5.0"
datefinder = "^0.7.3"
ruamel-yaml = "^0.18.6"


[build-system]
requires = ["poetry-core"]
package-mode = false
build-backend = "poetry.core.masonry.api"
