[tool.poetry]
name = "parquet-anonymizer"
version = "0.1.0"
description = "Data anonymizer for parquet files, configurable by column requirements"
authors = ["cmheidt"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.11.0"
Faker = "^30.8.1"
xxhash = "^3.5.0"
datefinder = "^0.7.3"
ruamel-yaml = "^0.18.6"


#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
matplotlib = "^3.10.0"
pyarrow = "^18.1.0"

[tool.ruff]
target-version = "py312"
#exclude = ["migrations", "notebooks"]
line-length = 100
lint.select = ["E", "F"]

[tool.ruff.format]
docstring-code-format = true